--- a/src/components/Welcome/Welcome.css
+++ b/src/components/Welcome/Welcome.css
@@ -31,7 +31,7 @@ h1 {
 }
 
 .btn {
-    display: inline-block;
+    justify-content: flex-end;
     background: #000;
     color: #fff;
     border: none;
@@ -53,6 +53,33 @@ h1 {
 }
 
 .btn-block {
+    display: block;
+    width: 100%;
+}
+
+.btn2 {
+    justify-content: flex-end;
+    background: #000;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    margin: 5px;
+    border-radius: 5px;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 15px;
+    font-family: inherit;
+}
+
+.btn2:focus {
+    outline: none;
+}
+
+.btn2:active {
+    transform: scale (0.98)''
+}
+
+.btn2-block {
     display: block;
     width: 100%;
 }
