--- a/src/components/Welcome/Welcome.css
+++ b/src/components/Welcome/Welcome.css
@@ -1,11 +1,15 @@
 body {
     background-color: lightgrey;
-    color: blue;
+    color: black;
 }
 
 h1 {
     background-color: black;
     color: white;
+}
+
+div {
+    position: relative;
 }
 
 .container {
@@ -31,17 +35,21 @@ h1 {
 }
 
 .btn {
-    justify-content: flex-end;
+    display: flex;
+    justify-content: center;
+    position: relative;
     background: #000;
     color: #fff;
     border: none;
     padding: 10px 20px;
-    margin: 5px;
+    margin-top: 10px;
+    margin-left: 100px;
     border-radius: 5px;
     cursor: pointer;
     text-decoration: none;
     font-size: 15px;
     font-family: inherit;
+    align-items: flex-end;
 }
 
 .btn:focus {
