--- a/src/components/Register/style.css
+++ b/src/components/Register/style.css
@@ -18,11 +18,17 @@
 }
 
 .form__label{
+    display: block;
     width: 40%;
+    float: left;
+    padding: 6px;
 }
 
 .form_input{
-    width: 60%;
+    display: block;
+    width: calc(76% - 11px);
+    float: left;
+    padding: 6px;
 }
 
 .footer{
